<resources>
    <string name="app_name">TxtMe</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="sign_in">Sign In</string>
    <string name="no_account">Don\'t you have an account? Sign Up!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_out">You are about to sign out. \nDo you want to continue?</string>
    <string name="no">Cancel</string>
    <string name="yes">Ok</string>
    <string name="welcome">Welcome</string>
    <string name="password_regex">^(?=.*[a-z])(?=.*[A-Z])(?=.*\\d)(?=.*[$@$!%*?&amp;_])[A-Za-z\\d$@$!%%*?&amp;_]{8,20}</string>
    <string name="empty_email">The email field is empty</string>
    <string name="unmatched_email">Please write a valid email</string>
    <string name="empty_password">The password field is empty</string>
    <string name="login">Sign Up</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign Up</string>
    <string name="fill_all_fields">Please fill all fields!</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="unmatched_password"><![CDATA[Your password must contain at least one uppercase letter, one lowercase letter, one number and a special character [$@$!%*?&amp;_] and it must be at least 8 characters long]]></string>
    <string name="continue_sign_up">Please check your data. Do you want to continue?</string>
    <string name="grant_external">Please grant permission in order to add a picture</string>
    <string name="user_display">User display key</string>
    <string name="write_message">Write a message</string>
    <string name="chat_activity">Chat</string>
    <string name="see_contacts">See all participants</string>
    <string name="settings">Settings</string>
    <string name="sign_out_title">Sign Out</string>
    <string name="participants">Participants</string>
    <string name="Phone">Phone</string>
    <string name="save">Guardar</string>
    <string name="phone">7444322232</string>
    <string name="user_name">User name</string>
    <string name="phone_hint">Phone</string>
    <string name="message">Hello! This is a message from Txt Me!</string>
</resources>
