<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity"
    >

    <ImageView
        android:id="@+id/login_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/login_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:visibility="gone" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/login_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        >

        <Button
            android:id="@+id/login_signInButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/login_guideline"
            app:layout_constraintRight_toRightOf="@+id/textInputLayout2"
            app:layout_constraintLeft_toLeftOf="@+id/textInputLayout2"
            android:layout_marginTop="32dp"
            android:text="@string/sign_in"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:backgroundTint="@color/colorPrimary"
            />

        <TextView
            android:id="@+id/login_signUpTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/login_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="8dp"
            android:text="@string/no_account"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            />

        <android.support.constraint.Guideline
            android:id="@+id/login_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/login_signInTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@android:color/white"
            android:visibility="visible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="32dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:background="@color/colorPrimary">

            <EditText
                android:id="@+id/login_emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/white"
                android:backgroundTint="@android:color/white"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="@+id/textInputLayout"
            app:layout_constraintBottom_toTopOf="@+id/login_guideline"
            app:layout_constraintLeft_toLeftOf="@+id/textInputLayout"
            android:layout_marginBottom="8dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:background="@color/colorPrimary">

            <EditText
                android:id="@+id/login_passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@android:color/white" />

        </android.support.design.widget.TextInputLayout>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
