<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.monsordi.txtme.Detalles">
    
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true"
        android:id="@+id/appbar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/collapsing"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/colorPrimary"

            >

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_user"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:contentDescription="@null"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    app:layout_constraintDimensionRatio="h,1:1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />
            </android.support.constraint.ConstraintLayout>


            
            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_collapseMode="pin"
                android:id="@+id/toolbar"/>

        </android.support.design.widget.CollapsingToolbarLayout>
        
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nesteScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tx_username"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/name"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/phone_icon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_weight="1"
                        android:alpha="0.5"
                        android:src="@drawable/phone"
                        app:layout_constraintTop_toBottomOf="@id/tx_username"
                        app:layout_constraintStart_toStartOf="@id/tx_username"
                        android:layout_marginTop="16dp"
                        />

                    <TextView
                        android:id="@+id/tx_userphone"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="@+id/phone_icon"
                        app:layout_constraintEnd_toEndOf="@+id/tx_username"
                        app:layout_constraintStart_toEndOf="@+id/phone_icon"
                        app:layout_constraintTop_toTopOf="@+id/phone_icon"
                        tools:text="@string/phone" />

                    <ImageView
                        android:id="@+id/email_icon"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginTop="16dp"
                        android:alpha="0.5"
                        android:src="@drawable/email"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@id/phone_icon"
                        app:layout_constraintTop_toBottomOf="@+id/phone_icon" />

                    <TextView
                        android:id="@+id/tx_userEmail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="@+id/email_icon"
                        app:layout_constraintEnd_toEndOf="@+id/tx_userphone"
                        app:layout_constraintStart_toStartOf="@+id/tx_userphone"
                        app:layout_constraintTop_toTopOf="@id/email_icon" />
                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>



</android.support.design.widget.CoordinatorLayout>
